// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when there are is no gray InfoComponent 1`] = `
<div
  className="gray-theme"
>
  <div
    className="media"
  >
    <img
      alt=""
      className="info-img"
      src="img/info1.jpg"
    />
  </div>
  <div
    className="content"
  >
    <h2>
      More info about us
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
    <p
      className="small"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </div>
</div>
`;

exports[`renders when there are is no green InfoComponent 1`] = `
<div
  className="green-theme"
>
  <div
    className="media"
  >
    <img
      alt=""
      className="info-img"
      src="img/info2.jpg"
    />
  </div>
  <div
    className="content"
  >
    <h2>
      More info about us
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
    <p
      className="small"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </div>
</div>
`;

exports[`renders when there are is no white InfoComponent 1`] = `
<div
  className="white-theme"
>
  <div
    className="media"
  >
    <img
      alt=""
      className="info-img"
      src="img/info3.jpg"
    />
  </div>
  <div
    className="content"
  >
    <h2>
      More info about us
    </h2>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
    <p
      className="small"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </p>
  </div>
</div>
`;
